--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ section{
 }
 
 footer{
-    background-image: url(/assets/images/pattern-hills.svg);
+    background-image: url(./assets/images/pattern-hills.svg);
     width: 100vw;
     height: 100px;
 }
