--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url(./assets/images/bg-stars.svg);
+    background-image: url(../assets/images/bg-stars.svg);
     background-color: #160118;
 }
 header{
@@ -48,7 +48,7 @@ h2{
 }
 
 footer{
-    background-image: url(./assets/images/pattern-hills.svg);
+    background-image: url(../assets/images/pattern-hills.svg);
     width: 100vw;
     height: 100px;
 }
